Remove rx java and replace with coroutines. Add permission handling Much more refactoring.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="enter_location_hint">Enter location</string>
     <string name="no_results_message">No results yet!</string>
     <string name="no_matches_message">No matches</string>
+    <string name="match_number_of_players_label">Number of players</string>
 </resources>
