--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,13 +22,21 @@
     <string name="match_update_squad_button_text">Update</string>
     <string name="match_squad_size_required_label">required</string>
     <string name="match_current_status_label_text">Current</string>
-    <string name="match_list_summary_format">%1$s at %2$s</string>
+
+    <string name="match_list_summary_format">%1$s at %2$s-%3$s</string>
+    <string name="match_list_empty_text">No matches press + to add</string>
+    <string name="match_list_full_squad_status">Full squad</string>
+    <string name="match_list_more_players_needed_squad_status">%1$s more players needed</string>
+
 
     <string name="squad_not_invited_players_tab_text">Still to invite</string>
     <string name="squad_invited_players_tab_text">Invited</string>
 
     <string name="match_types_format">%1$d a-side</string>
     <string name="match_type">Match Type</string>
+    <string name="next">Next</string>
+    <string name="invite_players_label">Invite players</string>
+    <string name="permissons_denied_text">We need contact permission to import from your contacts</string>
 
     <string-array name="player_invitation_status">
         <item/>
