--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="match_title_new">Match</string>
     <string name="match_types_format">%1$d a-side</string>
     <string name="next">Next</string>
-
+    <string name="generic_error_message">Really annoying generic error message</string>
 </resources>
