Added some error handling for importing contacts and some other refactoring

--- a/importcontacts/src/main/res/values/strings.xml
+++ b/importcontacts/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="permissons_denied_text">We need contact permission to import from your contacts</string>
+    <string name="no_contacts_message">No contacts to add</string>
 </resources>
