Rough version of hiding bottom navigation bar when going to import contacts screen

--- a/playerlist/src/main/res/values/strings.xml
+++ b/playerlist/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
+    <string name="player_list_title">Players</string>
     <string name="player_list_no_players_message">"No players, press + to add"</string>
 </resources>
