--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Fives Organiser</string>
     <string name="generic_error_message">Really annoying generic error message</string>
+    <string name="navigate_up_content_description">Navigate up</string>
 </resources>
