Added some UI to show when the user denies permission.

--- a/features/importcontacts/src/main/res/values/strings.xml
+++ b/features/importcontacts/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="import_contacts_title">Import Contacts</string>
-    <string name="permissions_denied_text">We need contact permission to import from your contacts</string>
+    <string name="permissions_denied_text">We need contact permission to import from your contacts.\nIt will be quicker than entering it manually.\nWe won\'t use it for anything bad.. honest</string>
+    <string name="permissions_denied_request_permission_again">I believe you, let\'s try again</string>
+    <string name="permissions_denied_no">No I don\'t want to give you permission</string>
     <string name="no_contacts_message">No contacts to add</string>
     <string name="import_contacts_add">Add</string>
 </resources>
